fix: remove overflow

--- a/gem-puzzle/style.css
+++ b/gem-puzzle/style.css
@@ -7,7 +7,6 @@ body {
   background: url(./assets/images/bg-full.jpg) center;
   background-repeat: no-repeat;
   background-size: cover;
-  overflow: hidden;
 }
 
 * {
